# Grid-Trader

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  README.md  README.txt  pyproject.toml
config/: strategy.schema.json
config/examples/: live_spot_grid.json  paper_spot_grid.json
src/app/: bootstrap.py  cli.py
src/config/: loader.py  normalizer.py  semantic_validation.py
src/domain/: enums.py  errors.py  events.py  ids.py  models.py
src/exchange/: base.py  constraints.py  symbols.py  types.py
src/exchange/adapters/: kraken_spot.py  mock_spot.py
src/execution/: fill_processor.py  order_manager.py  reconciliation.py
src/ledger/: balances.py  inventory.py  pnl.py
src/market_data/: cache.py  health.py  service.py
src/persistence/: journal.py  snapshots.py  sqlite_store.py
src/risk/: kill_switch.py  manager.py  rules.py
src/strategy/: grid_engine.py  grid_math.py  grid_planner.py  state_machine.py
src/telemetry/: logging.py  metrics.py
strategies/: doge_usd_grid_live.json
tests/integration/: test_engine_flow.py
tests/unit/: test_config.py  test_constraints_and_ids.py  test_grid_math.py  test_ledger_and_pnl.py  test_order_safety.py  test_risk_and_reconciliation.py  test_symbol_normalization.py
